tests/error/comptime/check_inplace_construct7.bz
// error: invalid construction of an object of type 'int32'
// note: while evaluating expression at compile time
// note: address points to an element in this allocation, that has already been constructed
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc(int32, 5);
		defer __builtin_comptime_free(p);

		for (let i in 0..5)
		{
			__builtin_inplace_construct(p + i, 0);
		}
		__builtin_inplace_construct(p + 3, 0);
	});
}
